# hlotify

./: .gitignore  CMakeLists.txt  CMakePresets.json  README-ru.md  README.md  sonar-project.properties
.github/workflows/: build.yml
source/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  config.cpp  hlotify_exception.cpp  hlotify_logger.cpp  main.cpp  notification.cpp  notification.h  notification_elements.cpp  notification_manager.cpp  notificationmanager.cpp  notificationmanager.h
src/headers/: button_element.h  clickable.h  config.h  drawable.h  hlotify_exception.h  hlotify_logger.h  image_element.h  notification.h  notification_container.h  notification_element.h  notification_elements.h  notification_manager.h  notificationmanager.h  text_element.h
